hphp/test/slow/reified_generics/error-erased-generic-fun-2.php.expectf
Fatal error: Function f expects a reified generic at index 2 in %s on line 4
